link protobuf lib in the subdir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,4 @@ ADD_SUBDIRECTORY(proto)
 
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
 ADD_EXECUTABLE(main main.cpp)
-TARGET_LINK_LIBRARIES(main proto ${PROTOBUF_LIBRARY})
+TARGET_LINK_LIBRARIES(main proto)
