--- a/proto/CMakeLists.txt
+++ b/proto/CMakeLists.txt
@@ -1,6 +1,7 @@
 INCLUDE(FindProtobuf)
 FIND_PACKAGE(Protobuf REQUIRED)
 INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
-PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER message.proto)
+FILE(GLOB protofiles "${CMAKE_CURRENT_SOURCE_DIR}/*.proto")
+PROTOBUF_GENERATE_CPP(PROTO_SRC PROTO_HEADER ${protofiles})
 ADD_LIBRARY(proto ${PROTO_HEADER} ${PROTO_SRC})
 target_link_libraries(proto ${PROTOBUF_LIBRARY})
